Bug 155158 - Cursor disappears when switching from chinese layout (windows 10)
Summary: Cursor disappears when switching from chinese layout (windows 10)
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.5.3.2 release
Hardware: All Windows (All)
: medium normal
Assignee: Jonathan Clark
URL:
Whiteboard: target:25.8.0 target:25.2.5
Keywords:
Depends on:
Blocks: CJK IME
  Show dependency treegraph
 
Reported: 2023-05-05 18:58 UTC by nikolasopi
Modified: 2025-08-01 09:21 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
Korean input duplication bug is reproduced on the LibreOffice 25.8 RC2 (51.88 KB, image/png)
2025-08-01 08:38 UTC, DaeHyun Sung
Details

Note You need to log in before you can comment on or make changes to this bug.
Description nikolasopi 2023-05-05 18:58:50 UTC
Description:
If you don't already know, in the chinese keyboard layout there are 2 input modes, english and chinese. In the chinese one, you write the characters in 'pinyin' (phonetic chinese which uses english characters) and then select with the numbers the character you want to type. Also, when you press shift, you switch between those input modes. The chinese input stays 'floating' and if you switch to english mode, by pressing shift, it gets typed in english.

To reproduce this bug, you have to type something in the chinese input mode but then instead of selecting a character or pressing shift to type it as is, you have to switch to a different keyboard layout (with 'alt' + 'shift' in windows)(I switched between greek and chinese layouts but i doubt this matters). After that you will notice that the text stays in this 'floating' state and the cursor dissapears.

When it disappears, you can still type normaly and by saving the document it reappears. After a few times of this happening, the paragraph I was working on got deleted, undo didn't work and shortly after the application crashed.

Steps to Reproduce:
1.Start typing something in chinese layout (chinese input mode)
2.Instead of selecting a character or pressing shift to print what was typed in english, switch layout by pressing 'alt' + 'shift'


Actual Results:
The cursor dissapears and the 'floating' text that was typed stays on the document. Once a part of the document got deleted and undo didn't work. Shortly after the application crashed. Saving the document makes the cursor reappear.

Expected Results:
The expected behaviour is the same with when switching from chinese input mode to english input mode(by pressing 'shift'); the text gets typed in english without any special characters.


Reproducible: Always


User Profile Reset: No

Additional Info:
Version: 7.5.3.2 (X86_64) / LibreOffice Community
Build ID: 9f56dff12ba03b9acd7730a5a481eea045e468f3
CPU threads: 12; OS: Windows 10.0 Build 19045; UI render: Skia/Raster; VCL: win
Locale: el-GR (el_GR); UI: en-US
Calc: CL threaded
Comment 1 Dieter 2023-05-18 16:20:42 UTC
Thank you for reporting the bug. Does it also happen in SafeMode (Help -> Restart in SafeMode)?
=> NEEDINFO
Comment 2 QA Administrators 2023-11-15 03:12:06 UTC Comment hidden (obsolete)
Comment 3 QA Administrators 2023-12-16 03:13:11 UTC Comment hidden (obsolete)
Comment 4 Kevin Suo 2023-12-16 16:30:47 UTC
Restore to UNCONFIRMED as this issue apparently has nothing to do with "safe mode".
Comment 5 Jonathan Clark 2025-05-27 07:50:24 UTC
Reproduced using the Windows 11 Microsoft Pinyin IME.
Comment 6 Commit Notification 2025-05-27 12:42:07 UTC
Jonathan Clark committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/08a3854ba355c511a8098b64a8346dda614ea630

tdf#155158 vcl: Fix IME composition not ending on end comp message

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2025-06-27 11:04:52 UTC
Jonathan Clark committed a patch related to this issue.
It has been pushed to "libreoffice-25-2":

https://git.libreoffice.org/core/commit/f4bba60e7fff74126eed6b3557cdcc39ef5a8273

tdf#155158 vcl: Fix IME composition not ending on end comp message

It will be available in 25.2.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 DaeHyun Sung 2025-08-01 08:38:30 UTC
Created attachment 202121 [details]
Korean input duplication bug is reproduced on the LibreOffice 25.8 RC2

Korean input duplication bug is reproduced on the LibreOffice 25.8 RC2

Writer
Version: 25.8.0.2 (X86_64)
Build ID: 80a8bc2ef75d415a197e282da0ebf917315d5e24
CPU threads: 16; OS: Windows 10 X86_64 (build 19045); UI render: Skia/Raster; VCL: win
Locale: ko-KR (ko_KR); UI: ko-KR
Calc: threaded