tdf#155158 vcl: Fix IME composition not ending on end comp message

This change updates our Windows IME integration to gracefully handle the
case where the IME sends a WM_IME_ENDCOMPOSITION message to terminate
composition without sending a final WM_IME_COMPOSITION message.

Change-Id: I97f8cacaec318d613f42cdc668f13841d9ff23eb
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/185901
Tested-by: Jenkins
Reviewed-by: Jonathan Clark <jonathan@libreoffice.org>